--- a/EntityRelationship1JPA/.project
+++ b/EntityRelationship1JPA/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>EntityRelaotionship1JPA</name>
+	<name>EntityRelationship1JPA</name>
 	<comment></comment>
 	<projects>
 	</projects>
