--- a/EntityRelationshipJPA/.project
+++ b/EntityRelationshipJPA/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>EntityRelaotionshipJPA</name>
+	<name>EntityRelationshipJPA</name>
 	<comment></comment>
 	<projects>
 	</projects>
